# trapper-joe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  RASPBERRY_PI_SETUP.md  SETUP.md  TROUBLESHOOTING.md
src/trapperjoe/: __init__.py  __main__.py  cli.py  config.py  email_handler.py  listener.py  state_manager.py  utils.py  web_server.py
tests/: __init__.py  test_config.py  test_email_handler.py  test_state_manager.py  test_utils.py  test_web_server.py
